--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,18 @@
 <html>
 <head>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script type="text/javascript">
-    document.addEventListener('DOMContentLoaded', function () {
-      if (window.Telegram.WebApp) {
-        window.localStorage.setItem('viewportStableHeight', Telegram.WebApp.viewportStableHeight);
-      }
+  <script>
+    function getViewportStableHeight() {
+      return Telegram.WebApp.viewportStableHeight;
+    }
+
+    function closeWindow() {
+      Telegram.WebApp.close();
+    }
+
+    window.addEventListener("DOMContentLoaded", function() {
+      Telegram.WebApp.ready();
+      Telegram.WebApp.expand();
     });
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
