--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
       Telegram.WebApp.expand();
     });
   </script>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="home.dart.js" type="application/javascript"></script>
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
