--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="vibration.js"></script>
   <script>
     function getViewportStableHeight() {
       return Telegram.WebApp.viewportStableHeight;
@@ -17,6 +18,7 @@
     });
   </script>
   <script src="home.dart.js" type="application/javascript"></script>
+  
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
