--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,31 @@
       Telegram.WebApp.expand();
     });
   </script>
-  <script src="home.dart.js" type="application/javascript"></script>
+  
+
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDGJiobqeRwZAIY6TRuw7yPHxi7eB08QA0",
+    authDomain: "votexmini.firebaseapp.com",
+    projectId: "votexmini",
+    storageBucket: "votexmini.appspot.com",
+    messagingSenderId: "1032110334127",
+    appId: "1:1032110334127:web:e566710f12aa6fc8fc345a",
+    measurementId: "G-6W6QVH6GPS"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
   
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -56,8 +80,12 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script src="main.dart.js" type="application/javascript"></script>
+
 </head>
 <body>
+ 
+
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
